src/test/compile-fail/trait-or-new-type-instead.rs
// error-pattern: implement a trait or new type instead
impl <T> Option<T> {
    fn foo() { }
}

fn main() { }
